# daemon2acp

./: .gitignore  Cargo.toml  PLAN.md  PROGRESS.md  README.md
crates/daemon2acp-core/: Cargo.toml
crates/daemon2acp-core/src/: acp_mapper.rs  agent.rs  lib.rs  session.rs
crates/daemon2acp-http/: Cargo.toml
crates/daemon2acp-http/src/: main.rs
python/: ACP_CLIENT_GUIDE.md  DIRECT_CALL_PLAN.md  QWENPAW_SETUP.md  README.md  acp-agent.json  pyproject.toml  server.py  stdio_server.py
python/src/: acp_mapper.py  agent_state.py  daemon_launcher.py  mock_agent.py  proxy_agent.py  session_manager.py
python/tests/: test_endpoints.py
python/tests/debug/: README.md  daemon_alive_check.py  daemon_raw_test.py  launcher_test.py  lifecycle_test.py  sse_debug.py  sse_debug2.py
python/tests/e2e/: README.md  auto_start_test.py  launch_test.py  multi_turn_test.py  proxy_test.py  quick_test.py
