[workspace]
members = [
    "crates/daemon2acp-core",
    "crates/daemon2acp-http",
]
resolver = "2"

[workspace.dependencies]
agent-client-protocol = "1.0"
agent-client-protocol-schema = "1.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
futures = "0.3"
async-stream = "0.3"
